V0/Docs/RefDocs.md
# REFERENCE DOCUMENTS

1. [AN1278 - Interleaved Power Factor Correction (IPFC) Using the dsPIC DSC](https://ww1.microchip.com/downloads/en/Appnotes/01278A.pdf).

2. [PFC boost converter design guide](https://community.infineon.com/gfawx74859/attachments/gfawx74859/powermanagement/751/1/Infineon-ApplicationNote_PFCCCMBoostConverterDesignGuide-AN-v02_00-EN.pdf#.).

3. [Introduction to the Air Conditioner Reference Design](https://ww1.microchip.com/downloads/aemDocuments/documents/MCU16/ProductDocuments/SupportingCollateral/IntroductiontotheAirConditionerReferenceDesign%28public%29.pdf).

4. [ON Semiconducttor - Interleaved PFC](https://www.onsemi.com/%20pub/Collateral/TND380-D.PDF).

5. [ZXCT199Q - High-Precision Current Monitor Datasheet](https://www.diodes.com/assets/Datasheets/ZXCT199Q.pdf).

6. [M95256 - 256-Kbit serial SPI bus EEPROM with high-speed clock Datasheet](https://www.st.com/resource/en/datasheet/m95256-df.pdf).

7. [W25Q128JV - 3V 128M-BIT SERIAL FLASH MEMORY WITH DUAL/QUAD SPI & QPI Datasheet](https://www.winbond.com/resource-files/w25q128fv%20rev.m%2005132016%20kms.pdf).

8. [PIC32MK1024MCM064 - High Performance 32-bit MCU with DSP & FPU Datasheet](https://ww1.microchip.com/downloads/aemDocuments/documents/MCU32/ProductDocuments/DataSheets/PIC32MK-GPK-MCM-with-CAN-FD-Family-DataSheet-DS60001519E.pdf).

9. [AT30TS74 - Digital Temperature Sensor Datasheet](https://ww1.microchip.com/downloads/en/DeviceDoc/Web_AT30TS74_0217.pdf).

10. [Air Conditioner Reference Manual](https://ww1.microchip.com/downloads/en/DeviceDoc/Air%20Conditioner%20Reference%20Design%20User%20Guide.pdf).

11. [IKCM15H60GA - CIPOS Mini 600 V, 15 A three-phase intelligent power module Datasheet](https://www.infineon.com/dgdl/Infineon-IKCM15H60GA-DS-v02_04-EN.pdf?fileId=5546d4624fb7fef2014fcb68016c78ec).

12. [ACS724 - y Isolated Current Sensor IC with Common-Mode Field Rejection Datasheet](https://www.allegromicro.com/~/media/files/datasheets/acs724-datasheet.ashx).
